# ctp-rust

./: .gitignore  Cargo.toml  README.md  TradingDay.con  autobind.py  build.rs  decode.py  dump.txt  查看dll文件内函数入口名称.md
examples/: mdapi.rs  tdapi.rs  test.rs
shared/include/: error.xml
src/: ctpmd.cpp  ctptd.cpp  lib.rs  wrapper.cpp
src/binding/: mod.rs
