[package]
name = "ctp_rs"
version = "0.2.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = { version = "1.0.73", features = ["parallel"] }
lazy_static = "1.4.0"
regex = "1.4.1"
copy_to_output = "2.0.0"

[dev-dependencies]
crossbeam = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
log = "0.4.11"
dotenv = "0.15.0"
env_logger = "0.9.0"
