[package]
name = "ctp_rs"
version = "0.2.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
encoding = "0.2.33"
memchr = "2.5.0"
simple-error = "0.2.3"
time = "0.3.14"
log = "0.4.17"
fast_log = "1.5.30"

[build-dependencies]
bindgen = "0.61.0"
cc = { version = "1.0.73", features = ["parallel"] }
lazy_static = "1.4.0"
regex = "1.4.1"
copy_to_output = "2.0.0"

[dev-dependencies]
crossbeam = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
log = "0.4.11"
dotenv = "0.15.0"
env_logger = "0.9.0"
